# pyngs

./: __init__.py  llms.txt  pyproject.toml  readme.md
src/pyngs/: config.py  logger.py
src/pystuff/: __init__.py  config.py  logger.py  shapehook.py
tests/: test_config.py
