[project]
name = "pystuff"
version = "0.1.1"
description = "A collection of utilities for PyTorch development."
readme = "README.md"
authors = [
    { name = "Jack Salici", email = "giacomo.salici@unimore.it" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
