[project]
name = "pyngs"
version = "0.1.1"
description = "Python Things for easy Python project management and logging."
readme = "readme.md"
authors = [
    { name = "Jack Salici", email = "giacomo.salici@unimore.it" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
